2017-02-14  Juan Jose Nicola  <juan.nicola@greenbone.net>

	* openvas-nasl.1, openvas-nasl-lint.1: rename from
	openvas-nasl.1.in and openvas-nasl-lint.1.in

2017-02-14  Juan Jose Nicola  <juan.nicola@greenbone.net>

	* CMakeLists.txt: Remove configure_file for doc/openvas-nasl.1.in
	and doc/openvas-nasl-lint.1.in as they do not need to be configured
	with cmake variables.

	* nasl/CMakeLists.txt: Modify the source directory from where
	openvas-nasl.1 and openvas-nasl-lint.1 will be installed.

	* src/CMakeLists.txt: Remove a commented PUBLIC_HEADER_DESTINATION
	referring to nasl header that it is no longer required, since nasl
	is in the same module.

	* doc/Doxyfile_full.in, doc/Doxyfile.in: Add ALIASES and INPUT to
	generate nasl documentation.

2017-02-14  Juan Jose Nicola  <juan.nicola@greenbone.net>

	* doc/signatures-howto.txt: Moved from openvas-libraries

2017-02-14  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/utils.h: Remove unused declarations.

	* src/pluginscheduler.c (plugin_next_unrun_dependency)
	(plugins_scheduler_next): Remove useless code branches.

	* src/pluginscheduler.h: Remove unused declaration.

2017-02-13  Juan Jose Nicola  <juan.nicola@greenbone.net>

	* CMakeLists.txt: Uncomment configure_file of
	openvas-nasl.1 and openvas-nasl-lint.1.

	* nasl/CMakeLists.txt: Uncomment install files of openvas-nasl.1
	and openvas-nasl-lint.1.

2017-02-13  Juan Jose Nicola  <juan.nicola@greenbone.net>

	* CMakeLists.txt: Add handling for nasl submodule. Comment configure_file of
	openvas-nasl.1 openvas-nasl-lint.1

	* src/CMakeLists.txt: add INSTALL files related to openvassd, as it
	is not in top level CMakeLists.txt.

	* src/comm.c: include ../nasl/nasl.h instead of <openvas/nasl/nasl.h>.

	* src/nasl_plugins.c: include ../nasl/nasl.h instead of <openvas/nasl/nasl.h>.

	* src/pluginload.c: include ../nasl/nasl.h instead of <openvas/nasl/nasl.h>.

	* COPYING: Add entries related to nasl submodule
