@@ -1,33 +1,0 @@
-.TH OPENVAS-NASL-LINT 1 "May 26, 2015"
-.SH NAME
-openvas-nasl-lint \- OpenVAS standalone NASL linter
-.SH SYNOPSIS
-.B openvas-nasl-lint
-.RI [ options ] " nasl_file"
-.SH DESCRIPTION
-OpenVAS is a framework of several services and tools offering a comprehensive
-and powerful vulnerability scanning and vulnerability management solution.
-
-.B openvas-nasl-lint
-is linter targeted at the NASL language.
-.SH OPTIONS
-These programs follow the usual GNU command line syntax, with long
-options starting with two dashes (`-').
-A summary of options is included below.
-.TP
-.B \-h, \-\-help
-Show summary of options
-.TP
-.B \-d, \-\-debug
-Output debug log messages
-.TP
-.B \-l, \-\-nvt-list=<file>
-Process files from
-.B <file>
-.TP
-.B \-i, \-\-include-dir=<dir>
-Search for includes in
-.B <dir>
-.SH SEE ALSO
-.BR openvas-nasl (1)
-.br
